indexer/app/burn-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burn-fix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 0
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: burn-fix
  template:
    metadata:
      labels:
        app: burn-fix
    spec:
      containers:
      - name: burn-fix
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/indexer:tools-master-73086ce
        command: ["/bin/bash", "-c"]
        args: ["./bin/burn-fix"]
