indexer/app/geyser-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geyser-consumer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: geyser-consumer
  template:
    metadata:
      labels:
        app: geyser-consumer
    spec:
      containers:
      - name: geyser-consumer
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/indexer:geyser-consumer-dev-4b3ab2e
        command: ["/bin/bash","-c"]
        args: ["./bin/holaplex-indexer-geyser --network=mainnet --startup=normal --meili-url $MEILI_URL --meili-key $MEILI_KEY --dialect-api-key $DIALECT_API_KEY --dialect-api-endpoint $DIALECT_API_ENDPOINT & ./bin/holaplex-indexer-geyser --network=mainnet --startup=all --dialect-api-key $DIALECT_API_KEY --dialect-api-endpoint $DIALECT_API_ENDPOINT --meili-url $MEILI_URL --meili-key $MEILI_KEY"]
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
      dnsConfig:
        options:
        - name: ndots
          value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
