indexer/app/http-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-consumer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: http-consumer
  template:
    metadata:
      labels:
        app: http-consumer
    spec:
      containers:
      - name: store-config-consumer
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/indexer:http-consumer-dev-e8edaa8
        command: ["/bin/bash","-c"]
        args: ["./bin/holaplex-indexer-http --entity store-config --sender mainnet"]
        volumeMounts:
        - name: indexer-config
          mountPath: .env.local
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent

      - name: http-consumer
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/indexer:http-consumer-dev-e8edaa8
        command: ["/bin/bash","-c"]
        args: ["./bin/holaplex-indexer-http --entity metadata-json --sender mainnet"]
        volumeMounts:
        - name: indexer-config
          mountPath: .env.local
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
      dnsConfig:
        options:
        - name: ndots
          value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: indexer-config
          configMap:
            name: indexer-config
