indexer/app/search-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: search-consumer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: search-consumer
  template:
    metadata:
      labels:
        app: search-consumer
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: indexer-config
        name: search-consumer
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/indexer:search-consumer-dev-1cd5063
        command: ["/bin/bash","-c"]
        args: ["./bin/holaplex-indexer-search --sender mainnet"]
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
      dnsConfig:
        options:
        - name: ndots
          value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
