indexer/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: graphql
  namespace: prod-indexer
spec:
  ingressClassName: nginx
  rules:
  - host: graph-test.holaplex.com
    http:
      paths:
      - backend:
          service:
            name: graphql
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: graph.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: graphql
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - graph.holaplex.tools
    - graph.holaplex.com
