indexer/app/protected-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.holaplex.tools/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.holaplex.tools/oauth2/start?rd=$scheme://$best_http_host$request_uri$is_args$args"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization, X-Auth-Request-User,
      X-Auth-Request-Email, X-Auth-Request-Access-Token
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Keycloak-Sec-Auth $upstream_http_x_auth_request_user:$upstream_http_x_auth_request_access_token;
      auth_request_set $name_upstream_1 $upstream_cookie_name_1;
  name: protected-graphql
spec:
  ingressClassName: nginx
  rules:
  - host: protected.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: graphql
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - protected.holaplex.tools
